--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,6 +1,29 @@
 group 'intelligent-systems-7-backend'
 version '1.0-SNAPSHOT'
 
+buildscript {
+    ext.kotlin_version = '1.1.4-3'
+
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+apply plugin: 'java'
+apply plugin: 'kotlin'
+
+sourceCompatibility = 1.8
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+
 subprojects {
     buildscript {
         ext.kotlin_version = '1.1.4-3'
