--- a/backend/control-server/build.gradle
+++ b/backend/control-server/build.gradle
@@ -9,14 +9,22 @@ repositories {
 }
 
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile group: 'com.tilab.jade', name: 'jade', version: '4.5.0'
     compile group: 'com.tilab.jade', name: 'jade-test-suite', version: '1.13.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+
     compile 'org.slf4j:slf4j-api:1.7.+'
     compile 'org.slf4j:slf4j-simple:1.7+'
+
     compile 'org.apache.commons:commons-configuration2:2.1.1'
     compile 'com.xebialabs.overthere:overthere:5.0.2'
     compile 'commons-beanutils:commons-beanutils:1.9.3'
+
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
