--- a/backend/control-server/build.gradle
+++ b/backend/control-server/build.gradle
@@ -25,7 +25,13 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.mockito:mockito-core:2.10.0'
+
+    testCompile 'org.junit.vintage:junit-vintage-engine:4.12.0'
+    testCompile 'org.junit.platform:junit-platform-runner:1.0.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
+
 }
 
 jar {
