--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -26,7 +26,7 @@ compileTestKotlin {
 
 subprojects {
     buildscript {
-        ext.kotlin_version = '1.1.4-3'
+        ext.kotlin_version = '1.1.50'
 
         repositories {
             mavenCentral()
@@ -47,4 +47,5 @@ subprojects {
     compileTestKotlin {
         kotlinOptions.jvmTarget = "1.8"
     }
+
 }
