--- a/backend/control-server/build.gradle
+++ b/backend/control-server/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
 
-    compile 'com.sparkjava:spark-kotlin:1.0.0-alpha'
+    compile 'com.sparkjava:spark-core:2.6.0'
 
     testCompile 'org.mockito:mockito-core:2.10.0'
 
