add: network container init to ContainerFactory, refactor factory method, reformat other classes

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,7 @@ gradle-app.setting
 **/servers.properties
 **/system.properties
 **/system-definition.json
+
+# Keystore
+**/control-server/keystore/
+**/*.pem
