--- a/backend/control-server/build.gradle
+++ b/backend/control-server/build.gradle
@@ -9,15 +9,33 @@ repositories {
 }
 
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile group: 'com.tilab.jade', name: 'jade', version: '4.5.0'
     compile group: 'com.tilab.jade', name: 'jade-test-suite', version: '1.13.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+
     compile 'org.slf4j:slf4j-api:1.7.+'
     compile 'org.slf4j:slf4j-simple:1.7+'
+
     compile 'org.apache.commons:commons-configuration2:2.1.1'
-    compile 'com.xebialabs.overthere:overthere:5.0.2'
+    compile ('com.xebialabs.overthere:overthere:5.0.2'){
+        exclude group: 'javax.servlet', module:'servlet-api'
+    }
     compile 'commons-beanutils:commons-beanutils:1.9.3'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
+
+    compile 'com.sparkjava:spark-core:2.6.0'
+
+    testCompile 'org.mockito:mockito-core:2.10.0'
+
+    testCompile 'org.junit.vintage:junit-vintage-engine:4.12.0'
+    testCompile 'org.junit.platform:junit-platform-runner:1.0.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
+
 }
 
 jar {
@@ -28,13 +46,23 @@ jar {
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 }
 
-task runApp(dependsOn: [jar, ":jade-container-spike:moveJar"]) {
+task runApp(dependsOn: [jar, ":backend:remote-container:moveJar"]) {
     doLast {
         if (project.hasProperty("appArgs")) {
             args Eval.me(appArgs)
         }
 
         javaexec {
+            classpath = sourceSets.main.runtimeClasspath
+            main = 'edu.swin.hets.ApplicationKt'
+        }
+    }
+}
+
+task runAppDev(dependsOn: jar){
+    doLast {
+        javaexec {
+            args = ["--dev"]
             classpath = sourceSets.main.runtimeClasspath
             main = 'edu.swin.hets.ApplicationKt'
         }
@@ -65,4 +93,8 @@ task shutdownRemotes(dependsOn: jar) {
             main = 'edu.swin.hets.tools.RemoteTerminatorKt'
         }
     }
+}
+
+sourceSets{
+    test.java.srcDirs += 'src/test/kotlin'
 }
