--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,7 +2,7 @@ group 'intelligent-systems-7-backend'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
+    ext.kotlin_version = '1.1.51'
 
     repositories {
         mavenCentral()
