--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,5 +21,9 @@
             "error",
             "always"
         ]
+    },
+    "globals": {
+        "d3": false,
+        "AgentGraph": false
     }
 }
