--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,6 @@ gradle-app.setting
 # Keystore
 **/control-server/keystore/
 **/*.pem
+
+# Bundled frontend resources
+**/src/main/resources/public/
