refactor: move frontend down one directory

--- a/backend/control-server/build.gradle
+++ b/backend/control-server/build.gradle
@@ -43,7 +43,7 @@ task cleanPublicWebDirectory {
 }
 
 task copyFrontend(type: Copy, dependsOn: cleanPublicWebDirectory) {
-    from '../../frontend'
+    from '../../frontend/src'
     into 'src/main/resources/public'
 }
 
