--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'is7-hets'
 include 'backend'
 include 'backend:remote-container'
 include 'backend:control-server'
+include 'frontend'
